--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ sourceSets {
 dependencies {
     implementation 'org.apache.groovy:groovy-all:4.0.16'
 
+    implementation 'com.beust:jcommander:1.82'
+
     implementation 'org.eclipse.jgit:org.eclipse.jgit:6.4.0.202211300538-r'
     implementation 'org.eclipse.jgit:org.eclipse.jgit.ssh.apache:6.4.0.202211300538-r'
     implementation 'org.eclipse.jgit:org.eclipse.jgit.gpg.bc:6.4.0.202211300538-r'
@@ -33,7 +35,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.apache.groovy:groovy-all:4.0.16'
 
-    implementation files('libs/jplag-5.1.0.jar')
+    implementation files('libs/jplag-6.1.0-jar-with-dependencies.jar')
 
     implementation 'commons-validator:commons-validator:1.7'
 
